[package]
name = "mast"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"
description = "A flexible build system configured by Rust code"
repository = "https://github.com/SabrinaJewson/mast.rs"
license = "MIT"
keywords = ["build system", "task runner", "make", "gulp"]
categories = ["caching", "filesystem"]

[features]
default = []

alloc = []
std = ["alloc"]

[dependencies]
pin-project-lite = "0.2.9"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_nightly"]
